--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,23 +1,21 @@
+html {
+  background-color: lightgray;
+}
 body {
-  padding: 50px;
-  font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
+  margin: 50px;
+  padding: 20px;
 }
 
 a {
   color: #00B7FF;
 }
-
-th, td {
-  width: 100px;
-  height: 50px;
-  border: 1px solid black;
-  padding:10px; 
-  margin:0;
+form {
+  line-height: 30px;
 }
 
-table {
-  border-collapse: collapse;
-  margin-bottom: 10px;
+.active {
+  border: 1px solid black;
+  border-radius: 20%;
 }
 
 nav {
@@ -29,10 +27,15 @@ nav {
   align-items: center;
 }
 
+nav ul {
+  list-style-type: none;
+}
+
 nav a {
   text-decoration: none;
   color: white;
 }
+
 nav a:hover {
   background-color: black;
 }
