--- a/views/flights/new.ejs
+++ b/views/flights/new.ejs
@@ -1,30 +1,34 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel='stylesheet' href='/stylesheets/style.css' />
-    <title><%= %>></title>
-</head>
-<body>
-<h2><%= title %></h2>
-    <form action="/flights" method="POST">
+<%- include('../partials/header') %>
+  <h2><%= title %></h2>
+  <form action="/flights" method="POST">
+      <div class="form-group">
         <label>Flight Number
-          <input type="number" name="flightNum">
+          <input class="form-control" type="number" name="flightNum">
         </label><br>
         <label>Airline
-          <select name="airline">
+          <select class="form-control" name="airline">
             <option value="American">American</option>
             <option value="United">United</option>
             <option value="Southwest">Southwest</option>
             <option value="Alaska">Alaska</option>
           </select>
         </label><br>
+
+        <label>Airport
+          <select class="form-control" name="airport">
+            <option value="AUS">Austin</option>
+            <option value="DAL">Dallas</option>
+            <option value="LAX">Los Angeles</option>
+            <option value="SEA">Seattle</option>
+            <option value="ORD">Chicago</option>
+          </select>
+        </label>
+        <br>
         <label>Departure Date:
-            <input type="datetime" name="departs" placeholder="MM/DD/YYYY, 07:30 PM">
-          </label><br>
+            <input class="form-control" type="datetime-local" name="departs" placeholder="MM/DD/YYYY, 07:30 PM">
+        </label><br>
         <input type="submit" value="Add Flight">
-    </form>
+      </div>
+  </form>
 </body>
 </html>
