--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -9,13 +9,14 @@
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
-    <title><=% title %></title>
+    <title><%= title %></title>
 </head>
 <body>
   <header class="header">
-      <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-        <a class="navbar-brand" href="#">Flights</a>
-                <a class="nav-link" href="/flights" <%- title === 'All Flights' ? 'class="active"' : '' %>>All Flights</a>
-                <a class="nav-link" href="/flights/new" <%- title === 'Enter A New Flight' ? 'class="active"' : '' %>>Add Flight</a>
-    </nav>
+      <nav>
+        <a class="navbar-brand" href="/flights">Flights</a></div>
+        <a class="nav-link" href="/flights" <%- title === 'All Flights' ? 'class="active"' : '' %>>All Flights</a>
+        <a class="nav-link" href="/flights/new" <%- title === 'Enter A New Flight' ? 'class="active"' : '' %>>Add Flight</a>
+      </nav>
+    <h2 class="h2 the-title"><%= title %></h2>
   </header>
