--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,2 +1,64 @@
-</body>
+<!-- Footer -->
+<footer class="page-footer font-small blue pt-4 fixed-bottom">
+
+
+        <!-- Footer Links -->
+        <div class="container-fluid text-center text-md-left">
+    
+          <!-- Grid row -->
+          <div class="row">
+    
+            <!-- Grid column -->
+            <div class="col-md-6 mt-md-0 mt-3">
+    
+              <!-- Content -->
+              <h5 class="text-uppercase">About</h5>
+              <p>West Coast Flights is an enterprise-oriented service that allows users
+                  to save flight information. This version only supports.
+              </p>
+    
+            </div>
+            <!-- Grid column -->
+    
+            <hr class="clearfix w-100 d-md-none pb-3">
+    
+            <!-- Grid column -->
+            <div class="col-md-3 mb-md-0 mb-3">
+    
+    
+              </div>
+              <!-- Grid column -->
+    
+              <!-- Grid column -->
+              <div class="col-md-3 mb-md-0 mb-3">
+                <br>
+                <!-- Links -->
+                <ul class="list-unstyled">
+                    <li>
+                        <a href="#!">Portfolio</a>
+                    </li>
+                    <li>
+                        <a href="#!">Twitter</a>
+                    </li>
+                    <li>
+                        <a href="https://github.com/bmrivers">GitHub</a>
+                    </li>
+                </ul>
+              </div>
+              <!-- Grid column -->
+    
+          </div>
+          <!-- Grid row -->
+    
+        </div>
+        <!-- Footer Links -->
+    
+        <!-- Copyright -->
+        <div class="footer-copyright text-center py-3">© 2018 Copyright:
+          <a href="https://mdbootstrap.com/education/bootstrap/"> MDBootstrap.com</a>
+        </div>
+        <!-- Copyright -->
+    
+      </footer>
+      <!-- Footer --></body>
 </html>
