--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,6 +1,7 @@
 html {
   background-color: lightgray;
 }
+
 body {
   display: flex;
   flex-direction: column;
@@ -32,7 +33,6 @@ nav > div {
 }
 
 nav {
-  /* margin: 20px 0px; */
   margin-bottom: 20px;
   height: 50px;
   background-color: #00B7FF;
@@ -48,8 +48,10 @@ nav ul {
 nav a {
   text-decoration: none;
   color: white;
+  padding: 0 20px;
 }
 
 nav a:hover {
-  background-color: black;
+  background-color: white;
+  color: black;
 }
