--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,5 +1,4 @@
 <%- include('./partials/header') %>
     <p>Welcome to <%= title %></p>
     <a href="/flights">Go to Flights</a>
-  </body>
-</html>
+<%- include('../partials/footer') %>
