--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -14,7 +14,7 @@
               <!-- Content -->
               <h5 class="text-uppercase">About</h5>
               <p>West Coast Flights is an enterprise-oriented service that allows users
-                  to save flight information. This version only supports.
+                  to save flight information.
               </p>
     
             </div>
